Fix overlapping "more info" links on small screens

--- a/styles/common/module_actions.scss
+++ b/styles/common/module_actions.scss
@@ -1,9 +1,8 @@
 #content {
   .more-info-link {
     float: right;
-    margin: -0.6em 0 0 0;
+    margin: 0.2em 0 0 0;
     padding: 0;
-    top: -1em;
     position: relative;
 
     color: $link-colour;
@@ -79,6 +78,12 @@ body.js-enabled #content .more-info {
   }
   ul.js-clicked {
     display: block;
+  }
+}
+
+@media (max-width: 640px) {
+	#content .more-info-link {
+	  margin-top: 0.05em;
   }
 }
 
